# felix

./: .gitignore  CMakeLists.txt  README.md
apps/android_rpc/: .gitignore  build.gradle
apps/android_rpc/app/: build.gradle
apps/android_rpc/app/src/main/: AndroidManifest.xml
apps/android_rpc/app/src/main/jni/: Android.mk  build.sh
apps/android_rpc/app/src/main/jni/make/: config.mk
apps/android_rpc/app/src/main/res/layout/: activity_main.xml  activity_rpc.xml
cmake/utils/: FindCUDA.cmake
docs/: felix_tenset_dataset_measurement.md
gallery/tutorial/: felix_tune_network.py
include/tvm/arith/: egg_simpl.h  var_context.h
include/tvm/auto_scheduler/: compute_dag.h  loop_state.h  search_policy_utils.h  sketch_policy.h  sketch_policy_rules.h  transform_step.h
include/tvm/driver/: driver_api.h
include/tvm/te/: schedule_pass.h
include/tvm/tir/: op.h  stmt_functor.h  var.h
include/tvm/topi/nn/: pooling.h
python/: env-aarch64.yaml  env.yaml
python/scripts/: ansor_cost_model.py  ansor_tune_network.py  felix_cost_model.py  felix_tune_network.py  tenset_measure_programs.py  tenset_patch_dataset.py  tf_torch_perf.py  train_cost_model.py
python/scripts/tf_nns/: __init__.py  dcgan.py  r3d.py  vit.py
python/tvm/auto_scheduler/: compute_dag.py  relay_integration.py  task_scheduler.py
python/tvm/auto_scheduler/cost_model/: __init__.py  dataset.py  metric.py  mlp_model.py  xgb_model.py
python/tvm/felix/: __init__.py  _ffi_api.py  ansor_tune.py  cost_model.py  features.py  ffi.py  logging.py  optim.py  sketch.py  sym_dag.py  sym_task.py  utils.py
python/tvm/felix/nn/: __init__.py  dcgan.py  llama.py  vit.py
python/tvm/relay/backend/: te_compiler.py
python/tvm/relay/frontend/: pytorch.py
python/tvm/relay/op/strategy/: cuda.py
python/tvm/te/: operation.py
python/tvm/te/hybrid/: parser.py
python/tvm/tir/: expr.py
python/tvm/topi/: math.py
python/tvm/topi/cuda/: conv2d_nhwc_tensorcore.py  conv2d_nhwc_winograd.py  conv2d_transpose.py
python/tvm/topi/nn/: batch_matmul.py  conv2d.py  conv2d_transpose.py  elemwise.py
src/arith/: CMakeLists.txt  egg_simpl.cc  var_context.cc
src/arith/egg_simpl/: Cargo.toml
src/arith/egg_simpl/src/: lang.rs  lib.rs
src/auto_scheduler/: auto_schedule.cc  compute_dag.cc  feature.cc  loop_state.cc  measure.cc  measure_record.cc  transform_step.cc  utils.cc  utils.h
src/auto_scheduler/search_policy/: empty_policy.cc  search_policy.cc  sketch_policy.cc  sketch_policy_rules.cc  utils.cc
src/driver/: driver_api.cc
src/felix/: constraints.cc  feat_transform.cc  features.cc  features.h  rangeinfer.h  sketch_rules.cc  sketch_rules.h  utils.cc  utils.h
src/te/operation/: op_utils.cc
src/te/schedule/: bound.cc  message_passing.cc  message_passing.h
src/tir/ir/: expr.cc  stmt_functor.cc
src/tir/op/: op.cc
src/tir/transforms/: inject_virtual_thread.cc  vectorize_loop.cc
tests/python/felix/: test_extract_task.py
(+5 files in other folders)
